Bug 273239 - Ark doesn't recognize some zip files from websites
Summary: Ark doesn't recognize some zip files from websites
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-14 01:38 UTC by mkkot
Modified: 2011-07-26 12:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mkkot 2011-05-14 01:38:47 UTC
Version:           2.16 (using Devel) 
OS:                Linux

Please go to site: http://napisy24.pl/ (with konqueror)
There is a container named "Nowe napisy". Please click on any of the positions within it. You probably will see a dialog asking if the file should be saved or opened in ark. Click open with Ark. Ark opens and says: "Unable to Determine Archive Type". Selecting there proper ZIP format doesn't help, however it IS a zip archive. I know napisy24's server sends this binary in some stupid way but ark doesn't recognise it as a zip archive at all. It works fine in KDE 3.5.

Reproducible: Always


Actual Results:  
Blank ark's window is opened with archive name

Expected Results:  
Files packed in archive should appear
Comment 1 Raphael Kubo da Costa 2011-05-15 04:12:55 UTC
Does it work fine if you save the file and then open it with Ark?
Comment 2 mkkot 2011-05-15 17:17:55 UTC
(In reply to comment #1)
> Does it work fine if you save the file and then open it with Ark?

Yes.
Comment 3 Raphael Kubo da Costa 2011-05-16 15:40:28 UTC
Hmm, it looks like the website sends an HTML page with a login form when one chooses to open the link with Ark (open the file with Ark, then select File/Save As).
Comment 4 Dawit Alemayehu 2011-05-16 23:12:53 UTC
Git commit dfa8f69efb330a9f9a714a94f123c5d384445be2 by Dawit Alemayehu.
Committed on 16/05/2011 at 23:09.
Pushed by adawit into branch 'master'.

Publish all KIO slaves on hold regardless of the state of the current job.
This should fix bug# 273239 and other similar issues.

CCBUG: 273239

M  +2    -1    kio/kio/krun.cpp     

http://commits.kde.org/kdelibs/dfa8f69efb330a9f9a714a94f123c5d384445be2
Comment 5 Raphael Kubo da Costa 2011-05-17 16:15:38 UTC
Confirming the issue, and reassigning to kio, as the problem seems to be in kdelibs according to adawit [1].

[1] http://thread.gmane.org/gmane.comp.kde.devel.kfm/12409/focus=12413
Comment 6 Dawit Alemayehu 2011-05-20 03:38:43 UTC
Git commit dffd5950b35ead8c14c5cf3a2495be5f8b7b9a1f by Dawit Alemayehu.
Committed on 17/05/2011 at 20:05.
Pushed by adawit into branch 'master'.

- Prevent a KIO slave from being removed from its on-hold state prematurely.
- Call KIO::Scheduler::publishSlaveOnHold after putting a KIO slave on hold.

BUG: 273239
REVIEW: 101379

M  +1    -1    kparts/browserrun.cpp     

http://commits.kde.org/kdelibs/dffd5950b35ead8c14c5cf3a2495be5f8b7b9a1f
Comment 7 mkkot 2011-05-21 11:20:51 UTC
Thanks guys :)
Comment 8 Dawit Alemayehu 2011-05-21 16:43:46 UTC
Git commit 02a68ff2b6e247d308efac1727a0401f12a1db0a by Dawit Alemayehu.
Committed on 21/05/2011 at 16:39.
Pushed by adawit into branch 'master'.

Revert commit dffd5950b35ead8c14c5cf3a2495be5f8b7b9a1f because it causes regression for some people.

CCBUG: 273239
CCBUG: 273783

M  +1    -1    kparts/browserrun.cpp     

http://commits.kde.org/kdelibs/02a68ff2b6e247d308efac1727a0401f12a1db0a
Comment 9 Dawit Alemayehu 2011-06-18 20:55:40 UTC
Git commit a3d65e2bf927c79fa4426116e9ca9169c0441758 by Dawit Alemayehu.
Committed on 17/06/2011 at 01:45.
Pushed by adawit into branch 'master'.

When a request is not handled, instead of discarding any KIO slave that might
have been put-on-hold, publish it so that it can be reused.

This fixes bug 273239 without introducing the regression reported in bug 273783.

BUG: 273239
CCBUG: 273783
FIXED-IN: 4.7.0
REVIEW: 101648

M  +1    -1    kparts/browserrun.cpp     

http://commits.kde.org/kdelibs/a3d65e2bf927c79fa4426116e9ca9169c0441758
Comment 10 mkkot 2011-07-26 09:37:35 UTC
Could someone please verify it once again? Upgraded to KDE 4.6.5 and now Konqueror and ark act identically as described in original bug report.
Comment 11 Raphael Kubo da Costa 2011-07-26 12:46:08 UTC
As comment #9 says, this has been fixed only in 4.7.0, so 4.6.5 should still have the issue.