When a request is not handled, instead of discarding any KIO slave that might have been put-on-hold, publish it so that it can be reused.

This fixes bug 273239 without introducing the regression reported in bug 273783.

BUG: 273239
CCBUG: 273783
FIXED-IN: 4.7.0
REVIEW: 101648